[project]
name = "limit_orders"
version = "0.0.0"
authors = ["alexey <alexnagornnyy.an@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
fuel-gql-client = { version = "0.14.1", default-features = false }
fuels = { version = "0.37", features = ["fuel-core-lib"] }
rand = "0.8.5"
serde_json = "1.0.94"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
