[package]
name = "limit_orders"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Alex Nagorny <alex@swaygang.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.39", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"

[dependencies]
rand = "0.8.5"
serde_json = "1.0.93"
tuple-conv = "1.0.1"
