[package]
name = "orderbook"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["alexey <alexnagornnyy.an@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.41.1", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"

[dependencies]
dotenv = "0.15.0"
serde = "1.0.183"
serde_json = "1.0.104"
src20_sdk = "0.0.3"
tai64 = "4.0.0"
