[package]
name = "spot-market"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["alexey <alexnagornnyy.an@gmail.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.49", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"

[dependencies]
dotenv = "0.15.0"
serde = "1.0.188"
serde_json = "1.0.107"
tai64 = "4.0.0"
