[package]
name = "matcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
fuels = { version = "0.41.0", features = ["fuel-core-lib"] }
reqwest = "0.11.16"
serde = "1.0.160"
serde_json = "1.0.93"
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11.5"}
tai64 = "4.0.0"
tokio = { version = "1.25.0", features = ["full"] }
tuple-conv = "1.0.1"
