[package]
name = "predicat-order-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
execute = "0.2.11"
fuels = { version = "0.38.1", features = ["fuel-core-lib"] }
serde_json = "1.0.94"
toml_edit = "0.19.6"

[dev-dependencies]
fuel-gql-client = { version = "0.14.1", default-features = false }
rand = "0.8.5"
reqwest = "0.11.14"
tokio = { version = "1.12", features = ["rt", "macros"] }
