[package]
name = "spark_indexer"
version = "0.0.0"
edition = "2021"
publish = false
rust-version = "1.73.0"

[lib]
crate-type = ['cdylib']

[dependencies]
fuel-indexer-utils = { version = "0.23" }
fuels = { version = "0.49", default-features = false }
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tai64 = "4.0.0"
